# pqls

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SKILL.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: release-workflow-audit.md  s3-design.md
examples/: gen_bad_arrow.rs  gen_fixture.rs
projects/pqls/design/: cycle-9-spec.md
projects/pqls/feedback/: cycle-6.md  cycle-7.md  cycle-8.md
projects/pqls/research/: cycle-6-design.md  cycle-7-inputs.md  cycle-8-inputs.md  cycle-9-inputs.md
scripts/: release.sh
src/: check.rs  csv_dump.rs  diff.rs  dir_mode.rs  inspect.rs  kv_meta.rs  main.rs  ndjson_dump.rs  sample.rs  schema.rs  tests.rs
src/s3/: auth.rs  error.rs  footer.rs  list.rs  mod.rs  path.rs  schema_brief.rs
tests/: cli.rs  integration_s3.rs
