[package]
name = "pqls"
version = "0.6.0"
edition = "2021"
description = "A command-line tool for inspecting Apache Parquet files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dunnock/pqls"
keywords = ["parquet", "cli", "data-engineering"]

[[bin]]
name = "pqls"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aws-config           = { version = "1.8",  features = ["behavior-version-latest"] }
aws-credential-types = "1.2"
aws-sdk-s3           = { version = "1.78", features = [] }
tokio                = { version = "1",    features = ["rt-multi-thread", "macros"] }
arrow-array = "54"
arrow-ipc = "54"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
humansize = "2"
parquet = { version = "54", features = ["arrow", "snap", "brotli", "flate2", "lz4", "zstd"] }
polars = { version = "0.46", features = ["parquet", "csv", "lazy", "json", "random", "ipc_streaming"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
bytes = "1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
